[tool.poetry]
name = "tcas-engineer"
version = "0.1.0"
description = ""
authors = ["BrossBoy <phongphiphatkhunchit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.22.0"
plotly = "^5.23.0"
pandas = "^2.2.2"
dash = "^2.17.1"
pandas = "^2.2.2"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
